修改了文件

--- a/src/main/resources/static/v1/admin.html
+++ b/src/main/resources/static/v1/admin.html
@@ -29,7 +29,7 @@
         <div class="col-md-6">
             <form class="form-inline">
                 <div class="form-group">
-                    <label for="name">发布新公告</label>
+                    <label for="content">发布新公告</label>
                     <input type="text" id="content" class="form-control" placeholder="请输入...">
                 </div>
                 <button id="send" class="btn btn-default" type="submit">发布</button>
